SERVER-37348 Make replication applier batches uninterruptible